--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,10 @@
 <!--			<artifactId>jaxb-api</artifactId>-->
 <!--			<version>2.3.0</version>-->
 <!--		</dependency>-->
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+		</dependency>
 
 	</dependencies>
 
