--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 	<properties>
 		<java.version>11</java.version>
 <!--		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>-->
+		<spring-boot-verion>2.2.5.RELEASE</spring-boot-verion>
+		<spring-boot-admin.version>2.2.2</spring-boot-admin.version>
+
 	</properties>
 
 	<dependencies>
@@ -131,7 +134,17 @@
 		</dependency>
 
 	</dependencies>
-
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>de.codecentric</groupId>
+				<artifactId>spring-boot-admin-dependencies</artifactId>
+				<version>${spring-boot-admin.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 
 	<build>
