--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -3,8 +3,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#    url: jdbc:h2:tcp://localhost/~/mastercard;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#    url: jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:tcp://localhost/~/mastercard;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password: sa
     driver-class-name: org.h2.Driver
@@ -32,4 +32,4 @@ logging:
   file.max-history: 7
   level:
     #    org.springframework: trace
-    org.hibernate.SQL: debug
+    # org.hibernate.SQL: debug
