--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,11 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+<!--
 			<scope>runtime</scope>
+-->
+			<version>RELEASE</version>
+			<scope>test</scope>
 		</dependency>
 
 <!--		<dependency>-->
