--- a/pom.xml
+++ b/pom.xml
@@ -120,11 +120,9 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-<!--
-			<scope>runtime</scope>
--->
+<!--			<scope>runtime</scope>-->
 			<version>RELEASE</version>
-			<scope>test</scope>
+<!--			<scope>test</scope>-->
 		</dependency>
 
 <!--		<dependency>-->
