--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -5,9 +5,9 @@ spring:
   datasource:
 #    url: jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
-    url: jdbc:h2:tcp://localhost/~/mastercard;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password: sa
+    url: jdbc:h2:~/mastercard;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: saravan
+    password: mypwd
     driver-class-name: org.h2.Driver
 #    initialization-mode: always
     auto-commit: true
