--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,15 @@
 spring.application.name: boot-admin-client
+spring.boot.admin.client.instance.service-base-url: http://localhost:10000
 spring.boot.admin.client.url: http://localhost:10000
+#spring.main:
+#  allow-bean-definition-overriding: true
+#  lazy-initialization: true
+#spring.mvc:
+#  pathmatch:
+#    matching-strategy: ant_path_matcher
+
+springdoc.api-docs.path: /api-docs
+
 management:
   endpoints:
     web:
@@ -14,6 +24,7 @@ logging:
     com.self.sprintboot.learning.shopping: DEBUG
 
 spring.output.ansi.enabled: always
+spring.h2.console.enabled: true
 
 
 
